[package]
name = "ssh-key-authority"
version = "3.0.0-rc0"
authors = ["Marc Mettke <marc@itmettke.de>"]
edition = "2018"

[features]
watch = ["handlebars-iron/watch"]

[dependencies]
aes = "0.3"
base64 = "0.12"
block-modes = "0.3"
chrono = { version = "0.4", features = ["serde"] }
clap = "2.33"
clokwerk = "0.3"
diesel = { version = "1.4", features = ["postgres", "mysql", "sqlite", "r2d2", "chrono"] }
diesel-derive-enum = { version = "0.4", features = ["postgres", "mysql", "sqlite"] }
failure = "0.1"
handlebars = "3.0"
handlebars-iron = "0.29"
iron = "0.6"
jsonwebtoken = "7.1"
log = "0.4"
oauth2 = "2.0"
pem = "0.7"
percent-encoding = "2.1"
rand = "0.7"
r2d2 = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple_logger = "1.3"
staticfile = "0.5"
time = "0.2"
url = "1.7"
